--- a/103-signup-pages/package.json
+++ b/103-signup-pages/package.json
@@ -4,7 +4,9 @@
   "description": "taobao signup pages",
   "main": "js/main.js",
   "scripts": {
-    "build": " ./node_modules/webpack-dev-server/bin/webpack-dev-server.js --progress --colors",
+    "build": "webpack",
+    "compress": "webpack -p",
+    "start": "webpack-dev-server --progress --colors",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -15,6 +17,7 @@
   "author": "dontry",
   "license": "ISC",
   "devDependencies": {
+    "connect-livereload": "^0.5.4",
     "css-loader": "^0.23.0",
     "del": "^2.1.0",
     "gulp": "^3.9.0",
@@ -22,10 +25,12 @@
     "gulp-load-plugins": "^1.1.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.1.0",
+    "gulp-serve": "^1.2.0",
     "gulp-uglify": "^1.5.1",
     "gulp-webpack": "^1.5.0",
     "node-sass": "^3.4.2",
     "webpack": "^1.12.9",
-    "webpack-dev-server": "^1.14.0"
+    "webpack-dev-server": "^1.14.0",
+    "webpack-stream": "^2.2.0"
   }
 }
