103 project production version

--- a/103-signup-pages/package.json
+++ b/103-signup-pages/package.json
@@ -21,8 +21,10 @@
     "css-loader": "^0.23.0",
     "del": "^2.1.0",
     "gulp": "^3.9.0",
+    "gulp-imagemin": "^2.4.0",
     "gulp-livereload": "^3.8.1",
     "gulp-load-plugins": "^1.1.0",
+    "gulp-minify-css": "^1.2.1",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.1.0",
     "gulp-serve": "^1.2.0",
