add node version

--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "signup-pages",
-  "version": "1.0.1",
+  "version": "0.0.3",
   "description": "taobao signup pages",
+  "engines":{
+    "node": "4.1.0"
+  },
   "main": "js/main.js",
   "scripts": {
     "build": "webpack",
