--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "signup-pages",
   "version": "0.0.3",
   "description": "taobao signup pages",
-  "engines":{
+  "engines": {
     "node": "4.1.0"
   },
   "main": "js/main.js",
@@ -32,7 +32,9 @@
     "gulp-sass": "^2.1.0",
     "gulp-serve": "^1.2.0",
     "gulp-uglify": "^1.5.1",
+    "gulp-util": "^3.0.7",
     "gulp-webpack": "^1.5.0",
+    "gutil": "^1.6.4",
     "node-sass": "^3.4.2",
     "webpack": "^1.12.9",
     "webpack-dev-server": "^1.14.0",
