--- a/302-backbone-quiz-app/package.json
+++ b/302-backbone-quiz-app/package.json
@@ -16,6 +16,7 @@
     "chai": "^3.5.0",
     "css-loader": "^0.23.1",
     "extract-text-webpack-plugin": "^1.0.1",
+    "firebase": "^2.4.1",
     "jquery": "^2.2.1",
     "mocha": "^2.4.5",
     "node-sass": "^3.4.2",
